# uuid

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  serde.rs
tests/: uuid.rs
