[package]
name = "lolid"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/uuid"
readme = "README.md"
description = "Simple UUID implementation"
categories = ["no-std"]
keywords = ["uuid"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
str-buf = "1.0.2"
