[package]
name = "lolid"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/uuid"
readme = "README.md"
description = "Minimal UUID implementation"
categories = ["no-std"]
keywords = ["uuid"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
str-buf = "1.0.2"
wy = { version = "1", optional = true }
getrandom = { version = "0.1", optional = true }
sha1 = { version = "0.6", optional = true }

[features]
# Enables v4 with pseudo RNG
prng = ["wy"]
# Enables v4 with OS RNG
osrng = ["getrandom"]
