[package]
name = "lolid"
version = "1.0.7"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
license = "BSL-1.0"
repository = "https://github.com/DoumanAsh/uuid"
readme = "README.md"
description = "Minimal UUID implementation"
categories = ["no-std"]
keywords = ["uuid", "unique"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md"
]

[dependencies]
str-buf = "2.0.0"
wy = { version = "1", optional = true }
getrandom = { version = "0.2", default-features = false, optional = true }
lhash = { version = "0", optional = true , default-features = false }
serde = { version = "1", default-features = false, optional = true }

[features]
# Enables v4 with pseudo RNG
prng = ["wy"]
# Enables v4 with OS RNG
osrng = ["getrandom"]
# Enables usage of OS facilities (e.g. current time)
std = []
# Enables v5
sha1 = ["lhash/sha1"]
# Enables v3
md5 = ["lhash/md5"]

[dev-dependencies.bincode]
version = "1.0"

[package.metadata.docs.rs]
features = ["prng", "osrng", "sha1", "serde", "std", "md5"]
